<resources>
    <string name="app_name">VoiceChat</string>
    <string name="prompt_user_name">Kullanıcı Adı</string>
    <string name="prompt_email">E-posta</string>
    <string name="prompt_password">Şifre</string>
    <string name="prompt_verify_password">Şifreyi Doğrula</string>
    <string name="action_sign_in">Giriş Yap</string>
    <string name="action_forgot_pass">Şifreni mi unuttun?</string>
    <string name="action_register">Kayıt Ol</string>
    <string name="action_send_reset_email">Send Reset Email</string>
    <string name="title">Hesap Oluştur</string>
    <string name="already_a_member">Hesabın var mı? </string>
    <string name="no_account">Hesabın yok mu? </string>
    <string name="find_friend">Hemen arkadaşlarını bul, \n yeni insanlarla tanış</string>
    <string name="reset_password">Reset password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>